[package]
name = "ldap3-issue47"
version = "0.1.0"
authors = ["Nicolas Bigaouette <nbigaouette@elementai.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ldap3 = "0.7.0-alpha.7"
# Same as ldap3's dependency
tokio = { version = "0.2", features = ["dns", "macros", "io-util", "stream", "sync", "tcp", "time", "uds"] }


[patch.crates-io]
ldap3 = { git = 'https://github.com/inejge/ldap3.git', rev = '2f88e03b9a7cd16b33a0a8feca9e472f593ca2e3' }
